# docre

./: .gitignore  Build.hs  Makefile  bin  docre.cabal  dokreg.cabal  stack.yaml
app/: Main.hs
lib/dev/: Makefile  init-dev.make
lib/shake/: build.hs  mk.hs
src/: Main.hs
src/Data/: Consul.hs  Docker.hs
src/Network/Consul/: DockerClient.hs
src/Pipes/: Docker.hs
src/Util/Shake/: Mk.hs
