name: docre
version: 0.0.1.0
synopsis: docker to consul registry
license: GPL-3
license-file: LICENSE
author: ml
maintainer: metaml@gmail.com
category: dunno
build-type: Simple
cabal-version: >= 1.20

library
  hs-source-dirs: src
  ghc-options:  -Wall -O2 -threaded -rtsopts -with-rtsopts=-I0
  default-language: Haskell2010
  build-depends: base == 4.*

executable app
  main-is: Main.hs
  hs-source-dirs: src
  ghc-options: -Wall -O2 -threaded -rtsopts -with-rtsopts=-I0
  default-language: Haskell2010
  build-depends: base == 4.*,
                 pipes == 4.*

executable build
  main-is: lib/shake/build.hs
  ghc-options: -Wall -O2 -threaded -rtsopts -with-rtsopts=-I0
  default-language: Haskell2010
  build-depends: base == 4.*,
                 filepath == 1.*,
                 hinotify == 0.3.*,
                 shake == 0.15.*,
                 split == 0.2.*,
                 text ==  1.*
