name: docre
version: 0.0.1.0
synopsis: docker to consul registry
license: GPL-3
license-file: LICENSE
author: ml
maintainer: metaml@gmail.com
category: dunno
build-type: Simple
cabal-version: >= 1.20

library
  exposed-modules: Data.Docker
                 , Data.Consul               
                 , Network.Consul.DockerClient
  hs-source-dirs: src
  ghc-options:  -Wall -O2 -threaded -rtsopts -with-rtsopts=-I0
  default-language: Haskell2010
  build-depends: base == 4.8.*
               , aeson == 0.9.*
               , bytestring == 0.10.*
               , convertible == 1.1.*
               , consul-haskell == 0.2.*
               , http-client == 0.4.*
               , http-types == 0.8.*               
               , MissingH == 1.3.*
               , network == 2.6.*
               , regex-tdfa == 1.2.*
               , regex-compat-tdfa == 0.95.*                                             
               , text > 1.2.1 && < 1.3                              
               , transformers == 0.4.*

executable app
  main-is: Main.hs
  hs-source-dirs: src
  other-modules: Data.Docker
               , Network.Consul.DockerClient
  ghc-options: -Wall -O2 -threaded -rtsopts -with-rtsopts=-I0
  default-language: Haskell2010
  build-depends: base == 4.8.*
               , aeson == 0.9.*
               , bytestring == 0.10.*
               , convertible == 1.1.*
               , consul-haskell == 0.2.*               
               , http-client == 0.4.*
               , http-types == 0.8.*                              
               , MissingH == 1.3.*
               , network == 2.6.*
               , pipes == 4.*
               , pipes-http == 1.0.*
               , regex-tdfa == 1.2.*
               , regex-compat-tdfa == 0.95.*                              
               , text > 1.2.1 && < 1.3               
               , transformers == 0.4.*
               , unordered-containers == 0.2.*

executable build
  main-is: lib/shake/build.hs
  ghc-options: -Wall -O2 -threaded -rtsopts -with-rtsopts=-I0
  default-language: Haskell2010
  build-depends: base == 4.8.*
               , filepath == 1.*
               , fsnotify == 0.1.*
               , hinotify == 0.3.*
               , shake == 0.15.*
               , split == 0.2.*
               , text > 1.2.1 && < 1.3
