name: dokreg
version: 0.0.1.0
synopsis: docker to consul registry
license: GPL-3
license-file: LICENSE
author: ml
maintainer: metaml@gmail.com
category: Utilities
build-type: Simple
cabal-version: >= 1.20

library
  hs-source-dirs: src
  ghc-options:  -Wall -O2 -threaded -rtsopts -with-rtsopts=-I0
  exposed-modules: Data.Docker
                 , Data.Consul
                 , Network.Consul.DockerClient
                 , Pipes.Docker
  build-depends: base
               , aeson
               , bytestring
               , consul-haskell
               , convertible
               , directory
               , either
               , http-client
               , http-types
               , MissingH
               , monad-par
               , mtl
               , network
               , pipes
               , regex-compat-tdfa
               , regex-tdfa
               , text
               , transformers
               , unordered-containers
               , vector
  default-language: Haskell2010

executable app
  main-is: Main.hs
  hs-source-dirs: app
  ghc-options: -Wall -O2 -threaded -rtsopts -with-rtsopts=-I0
  build-depends: base
               , dokreg
               , aeson
               , bytestring
               , consul-haskell
               , convertible
               , directory
               , either
               , http-client
               , http-types
               , MissingH
               , monad-par
               , network
               , pipes
               , pipes-http
               , regex-compat-tdfa
               , regex-tdfa
               , text
               , unordered-containers
               , transformers
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/metaml/dokreg
